--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
 #Emails
-alkemy.icons.email.sender = marzoa3581@gmail.com
-alkemy.icons.email.enabled = false
+alkemy.disney.email.sender = marzoa3581@gmail.com
+alkemy.disney.email.enabled = true
